--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,10 @@
       "schematics": {
         "@schematics/angular:application": {
           "strict": true
+        },
+        "@schematics/angular:component": {
+          "inlineStyle": true,
+          "inlineTemplate": true
         }
       },
       "root": "",
